--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "Central de Notícias",
-  "short_name": "Central",
-  "description": "As últimas notícias e fofocas do mundo das celebridades, atualizadas diariamente.",
+  "name": "Celeb-se",
+  "short_name": "Celeb-se",
+  "description": "O seu radar do mundo das celebridades.",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#DB2777",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/DB2777/FFFFFF?text=CN",
+      "src": "https://i.imgur.com/BH6hIJn.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512/DB2777/FFFFFF?text=CN",
+      "src": "https://i.imgur.com/J0eXPFh.png",
       "sizes": "512x512",
       "type": "image/png"
     }
